<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.vlonjatg.progressactivity.ProgressLinearLayout
        android:id="@+id/progress_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/street_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/street_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/street_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"/>

        <TextView
            android:id="@+id/postal_code_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postal_code_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/postal_code_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp" />

        <TextView
            android:id="@+id/coordinates_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coordinates_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/coordinates_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp" />

        <TextView
            android:id="@+id/distance_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/distance_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp" />

    </com.vlonjatg.progressactivity.ProgressLinearLayout>
</android.support.constraint.ConstraintLayout>